<resources>
    <string name="app_name" translatable="false">Berkelas</string>

    <!-- Hint -->
    <string name="hint_full_name">Full Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_end_time">End Time</string>
    <string name="hint_school">School</string>
    <string name="hint_start_time">Start Time</string>
    <string name="hint_day">Day</string>
    <string name="hint_name">Name</string>
    <string name="hint_teacher">Teacher</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date</string>
    <string name="hint_text">Text</string>
    <string name="hint_background_color">Background Color</string>

    <!-- Button -->
    <string name="btn_sign_up">Sign Up</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_back">Back</string>
    <string name="btn_login">Login</string>

    <!-- ImageButton -->
    <string name="img_btn_item_menu">Item Menu</string>

    <!-- Error -->
    <string name="error_subject">fill in the subject first</string>
    <string name="error_cause_empty">This field cannot be empty</string>
    <string name="error_wrong_password">The password you entered is wrong</string>
    <string name="error_confirm_password_not_same">Confirm password must same</string>
    <string name="error_invalid_email_format">Email format is not correct</string>

    <!-- Content Description -->
    <string name="desc_school">School Icon</string>
    <string name="desc_kelas">Class Icon</string>
    <string name="desc_add_cash">Add Cash</string>

    <!-- Title -->
    <string name="dialog_positive_btn_signout">Sign Out</string>
    <string name="title_signout">Sign Out</string>
    <string name="title_choose_kelas">Choose class</string>
    <string name="title_choose_date">Choose Date</string>
    <string name="title_choose_gender">Choose Gender</string>
    <string name="title_insert_password">Insert password</string>
    <string name="title_close">Close</string>
    <string name="title_delete_room">Delete Room</string>

    <!-- Message -->
    <string name="message_signout">Yakin ingin sign out?</string>

    <!-- Toolbar -->
    <string name="toolbar_room_add">Add Room</string>
    <string name="toolbar_edit_room">Edit Room</string>
    <string name="toolbar_room_list">Room List</string>
    <string name="toolbar_subject">Subject</string>
    <string name="toolbar_account_edit">Edit Account</string>
    <string name="toolbar_choice_room">Pilih Room</string>

    <!-- Label -->
    <string name="label_room_detail_activity">RoomDetailActivity</string>
    <string name="label_sign_up_activity">SignUpActivity</string>

    <!-- Menu -->
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>

    <!-- TextView -->
    <string name="tv_login">Login</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="tv_role">Role</string>
    <string name="tv_privacy_information">Privacy Information</string>
    <string name="tv_sign_out">Sign Out</string>
    <string name="tv_no_subject">No Subject</string>


    <!-- String Array -->
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Role Enum -->
    <string name="role_leader">Leader</string>
    <string name="role_vice_leader">Vice Leader</string>
    <string name="role_secretary">Secretary</string>
    <string name="role_treasury">Treasury</string>
    <string name="role_member">Member</string>

    <!-- Colors -->
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="gray">Gray</string>

    <!-- Other -->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="toolbar_picket">Picket</string>
    <string name="hint_class">Class</string>
    <string name="toolbar_cash_detail">Cash Detail</string>

    <string name="title_choose_role">Choose Role</string>
    <string name="msg_are_you_sure">Are you sure?</string>

    <string name="btn_close">Close</string>
    <string name="tab_item_member">Member</string>
    <string name="tab_item_date">Date</string>
    <string name="toolbar_kas">Cash</string>

    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="tv_subject">Subject</string>
    <string name="tv_cash">Cash</string>
    <string name="tv_picket">Picket</string>
    <string name="tv_presence">Presence</string>
    <string name="tv_permit">Permit</string>
    <string name="tv_sick">Sick</string>
    <string name="error_save_data">Gagal menyimpan data</string>
    <string name="tv_edit_account">Edit Account</string>
    <string name="tv_members">Members</string>
    <string name="succes_subject_deleted">Subject deleted successfully</string>
    <string name="error_subject_delete_fail">Subject failed to delete</string>
    <string name="error_fail_get_data">Failed to get data</string>
    <string name="toolbar_add_picket">Add Picket</string>
    <string name="toolbar_edit_picket">Edit Picket</string>
    <string name="error_email_cannot_empty">Email cannot be empty</string>
    <string name="error_email_format_invalid">Email format is not correct</string>
    <string name="error_password_cannot_empty">"Password cannot be empty"</string>
    <string name="error_password_min_char">Al least 8 characters</string>
    <string name="error_not_in_room_yet">You haven\'t entered the room</string>
    <string name="toolbar_account">Account</string>
    <string name="tv_fill_your_data">Masukkan data anda</string>
    <string name="toolbar_add_cash">Add Cash</string>
    <string name="toolbar_edit_cash">Edit Cash</string>
    <string name="snackbar_data_not_load_yet">Data belum dimuat</string>
    <string name="btn_apply">Apply</string>
    <string name="tv_gallery">Gallery</string>
    <string name="tv_camera">Camera</string>
    <string name="toolbar_add_attendance">Add Attendance</string>
    <string name="tv_or_you_can">Atau anda bisa</string>
    <string name="toolbar_my_account">My Account</string>
</resources>